# whisper-subtitler

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  mkdocs.yml  pyproject.toml  refactor.md  run.py  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: development.md  faq.md  index.md  installation.md  modules.md  usage.md
docs/archive/: README.md  activeContext.md  algorithm-design-enhanced.md  algorithm-design.md  api-design.md  api-reference.md  architecture-design-enhanced.md  architecture-design.md  gpu-support-architecture.md  implementation-plan.md  installation-guide.md  platform-optimizations.md  progress.md  projectbrief.md  tasks.md  usage-examples.md  user-guide.md
tests/: conftest.py  test_application.py  test_audio_extractor.py  test_cli.py  test_config.py  test_diarise.py  test_integration.py  test_output_formats.py  test_transcribe.py
whisper_subtitler/: __init__.py  main.py  version.py
whisper_subtitler/modules/: __init__.py  application.py  cli.py  config.py  logger.py
whisper_subtitler/modules/audio/: __init__.py  extractor.py
whisper_subtitler/modules/diarisation/: __init__.py  diarizer.py
whisper_subtitler/modules/output/: __init__.py  formats.py  formatter.py
whisper_subtitler/modules/transcribe/: __init__.py  model_evaluator.py  transcriber.py
