[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-subtitler"
dynamic = ["version"]
description = "Automatic subtitles with faster-whisper and pyannote speaker diarization"
authors = [{ name = "Dominic Capparelli", email = "dcapparelli@picomms.tv" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ['python']
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "pyannote-audio",
    "torchvision",
    "torchaudio",
    "python-dotenv>=1.0.0",
    "sentencepiece>=0.2.1",
    "jiwer>=3.0.3",
    "librosa>=0.10.1",
    "scipy>=1.12.0",
    "soundfile>=0.12.1",
    "scikit-learn>=1.3.2",
]

[project.urls]
Homepage = "https://picommcapp.github.io/whisper-subtitler/"
Repository = "https://github.com/picommcapp/whisper-subtitler"
Documentation = "https://picommcapp.github.io/whisper-subtitler/"

[project.scripts]
whisper-subtitler = "whisper_subtitler.modules.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox>=4.0.0",
    "tox-uv>=1.11.3",
    "basedpyright",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_subtitler*"]

[tool.setuptools.dynamic]
version = { attr = "whisper_subtitler.version.VERSION" }

[tool.basedpyright]
include = ["whisper_subtitler", "tests"]
exclude = ["**/__pycache__", ".venv", "whisper_subtitler/subwhisper.py"]
typeCheckingMode = "basic"
reportArgumentType = false
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportGeneralTypeIssues = false
reportIndexIssue = false
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalCall = false
reportOptionalMemberAccess = false
reportReturnType = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Existing codebase complexity and exception-style baseline
    "C90",
    "TRY",
    "SIM",
    "B904",
    "C401",
    "C403",
    "PGH003",
    "RUF012",
    "S603",
    "S607",
    "RUF005",
    "UP038",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B007", "B008", "E722", "F841", "S101", "S105", "S314", "TRY003"]

[tool.ruff.format]
preview = true


